--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="h-full" lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Ardour Remote Control</title>
   </head>
-  <body class="bg-white text-black dark:bg-slate-900 dark:text-white">
-    <div id="app"></div>
+  <body class="h-full bg-white text-black dark:bg-slate-900 dark:text-white">
+    <div class="h-full" id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
